# dunkelheit

./: .gitignore  CMakeLists.txt  README.md
config/: root_directory.hpp.in  settings.json
inc/: animated_model.hpp  audio_engine.hpp  basic_model.hpp  config.hpp  cube_model.hpp  enemy.hpp  entity.hpp  file_system.hpp  filesystem.hpp  footsteps_system.hpp  fps_camera.hpp  game_scene.hpp  hunter.hpp  item.hpp  json_file.hpp  level.hpp  main_menu.hpp  mesh.hpp  model.hpp  model_loader.hpp  object.hpp  pixelator.hpp  plane_model.hpp  player_audio_system.hpp  player_entity.hpp  quad.hpp  random_generator.hpp  resource_path.hpp  settings.hpp  shader.hpp  text_renderer.hpp  texture2D.hpp  texture_2D.hpp  torch.hpp  weapon.hpp  working_directory.hpp
src/: audio_engine.cpp  main.cpp
src/shaders/: default.fs  default.vs  geometry_pass.fs  geometry_pass.vs  lighting_pass.fs  ssao.fs  ssao_blur.fs  text.fs  text.vs  weapon.fs  weapon.vs
